epics dublicate function
