# public/_openapi.json
@@ -31,9 +31,7 @@
   "paths": {
     "/projects": {
       "get": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Get a list of projects",
         "parameters": [
           {
@@ -80,10 +78,7 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ]
+              "enum": ["asc", "desc"]
             }
           }
         ],
@@ -127,10 +122,7 @@
                                 "description": "The date and time the project was created"
                               }
                             },
-                            "required": [
-                              "title",
-                              "chat_id"
-                            ]
+                            "required": ["title", "chat_id"]
                           }
                         ],
                         "required": [
@@ -161,9 +153,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Create a new project",
         "requestBody": {
           "required": true,
@@ -185,9 +175,7 @@
                     "description": "The unique identifier of Template"
                   }
                 },
-                "required": [
-                  "title"
-                ]
+                "required": ["title"]
               }
             }
           }
@@ -287,9 +275,7 @@
     },
     "/projects/template": {
       "get": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Get templates",
         "responses": {
           "200": {
@@ -415,9 +401,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Save project as template",
         "requestBody": {
           "required": true,
@@ -431,9 +415,7 @@
                     "description": "The unique identifier for the project"
                   }
                 },
-                "required": [
-                  "project_id"
-                ]
+                "required": ["project_id"]
               }
             }
           }
@@ -530,9 +512,7 @@
     },
     "/projects/template/{id}": {
       "delete": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Delete project template by ID",
         "parameters": [
           {
@@ -597,9 +577,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Update template",
         "parameters": [
           {
@@ -743,9 +721,7 @@
     },
     "/projects/{id}": {
       "get": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Get a project by ID",
         "parameters": [
           {
@@ -812,10 +788,7 @@
                                   "description": "The date and time the project was created"
                                 }
                               },
-                              "required": [
-                                "title",
-                                "chat_id"
-                              ]
+                              "required": ["title", "chat_id"]
                             },
                             {
                               "type": "object",
@@ -1063,9 +1036,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Delete project by ID",
         "parameters": [
           {
@@ -1130,9 +1101,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Projects"
-        ],
+        "tags": ["Projects"],
         "summary": "Update project by ID",
         "parameters": [
           {
@@ -1260,9 +1229,7 @@
     },
     "/epics": {
       "get": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "Get a list of epics",
         "parameters": [
           {
@@ -1309,10 +1276,7 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ]
+              "enum": ["asc", "desc"]
             }
           }
         ],
@@ -1348,9 +1312,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "Create a new epic",
         "requestBody": {
           "required": true,
@@ -1372,10 +1334,7 @@
                     "type": "number"
                   }
                 },
-                "required": [
-                  "title",
-                  "project_id"
-                ]
+                "required": ["title", "project_id"]
               }
             }
           }
@@ -1473,9 +1432,7 @@
     },
     "/epics/{id}": {
       "get": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "Get an epic by ID",
         "parameters": [
           {
@@ -1579,9 +1536,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "Delete an epic by ID",
         "parameters": [
           {
@@ -1646,9 +1601,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "Update epic by id",
         "parameters": [
           {
@@ -1774,9 +1727,7 @@
     },
     "/epics/{id}/dublicate": {
       "post": {
-        "tags": [
-          "Epics"
-        ],
+        "tags": ["Epics"],
         "summary": "dublicate an epic by ID",
         "parameters": [
           {
@@ -1882,9 +1833,7 @@
     },
     "/stories": {
       "get": {
-        "tags": [
-          "Stories"
-        ],
+        "tags": ["Stories"],
         "summary": "Get a list of stories",
         "parameters": [
           {
@@ -1931,10 +1880,7 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ]
+              "enum": ["asc", "desc"]
             }
           }
         ],
@@ -1971,9 +1917,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Stories"
-        ],
+        "tags": ["Stories"],
         "summary": "Create a new story",
         "requestBody": {
           "required": true,
@@ -1995,9 +1939,7 @@
                     "type": "number"
                   }
                 },
-                "required": [
-                  "title"
-                ]
+                "required": ["title"]
               }
             }
           }
@@ -2095,9 +2037,7 @@
     },
     "/stories/{id}": {
       "get": {
-        "tags": [
-          "Stories"
-        ],
+        "tags": ["Stories"],
         "summary": "Get an story by ID",
         "parameters": [
           {
@@ -2198,9 +2138,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Stories"
-        ],
+        "tags": ["Stories"],
         "summary": "Delete story by ID",
         "parameters": [
           {
@@ -2262,9 +2200,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Stories"
-        ],
+        "tags": ["Stories"],
         "summary": "Update story",
         "parameters": [
           {
@@ -2390,9 +2326,7 @@
     },
     "/tasks": {
       "get": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Get a list of tasks",
         "parameters": [
           {
@@ -2457,10 +2391,7 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ]
+              "enum": ["asc", "desc"]
             }
           }
         ],
@@ -2497,9 +2428,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Create a new task",
         "requestBody": {
           "required": true,
@@ -2533,10 +2462,7 @@
                     "description": "The status of the task"
                   }
                 },
-                "required": [
-                  "title",
-                  "status"
-                ]
+                "required": ["title", "status"]
               }
             }
           }
@@ -2610,9 +2536,7 @@
     },
     "/tasks/{id}": {
       "get": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Get a task by ID",
         "parameters": [
           {
@@ -2714,9 +2638,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Delete a task by ID",
         "parameters": [
           {
@@ -2777,9 +2699,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Update task by ID",
         "parameters": [
           {
@@ -2894,9 +2814,7 @@
     },
     "/taskwatchers": {
       "post": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Add a task watcher",
         "requestBody": {
           "required": true,
@@ -2914,10 +2832,7 @@
                     "type": "number"
                   }
                 },
-                "required": [
-                  "task_id",
-                  "userId"
-                ]
+                "required": ["task_id", "userId"]
               }
             }
           }
@@ -2970,9 +2885,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Tasks"
-        ],
+        "tags": ["Tasks"],
         "summary": "Remove a task watcher",
         "parameters": [
           {
@@ -3044,9 +2957,7 @@
     },
     "/login": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Login user with miniapp data",
         "requestBody": {
           "required": true,
@@ -3059,9 +2970,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "params"
-                ]
+                "required": ["params"]
               }
             }
           }
@@ -3138,11 +3047,7 @@
                               "type": "number"
                             }
                           },
-                          "required": [
-                            "token",
-                            "user",
-                            "chat_id"
-                          ]
+                          "required": ["token", "user", "chat_id"]
                         }
                       }
                     }
@@ -3178,9 +3083,7 @@
     },
     "/logout": {
       "delete": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Logout user",
         "requestBody": {},
         "responses": {
@@ -3215,9 +3118,7 @@
     },
     "/users": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Get a list of users in current chat",
         "parameters": [],
         "responses": {
@@ -3282,10 +3183,7 @@
       },
       "SortDirection": {
         "type": "string",
-        "enum": [
-          "asc",
-          "desc"
-        ]
+        "enum": ["asc", "desc"]
       },
       "GenericResponse": {
         "type": "object",
@@ -3345,10 +3243,7 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ]
+              "enum": ["asc", "desc"]
             }
           }
         }
@@ -3381,10 +3276,7 @@
             "description": "The date and time the project was created"
           }
         },
-        "required": [
-          "title",
-          "chat_id"
-        ]
+        "required": ["title", "chat_id"]
       },
       "Epic": {
         "type": "object",
@@ -3420,13 +3312,7 @@
             "description": "The date and time when the epic was last updated"
           }
         },
-        "required": [
-          "id",
-          "title",
-          "project_id",
-          "created_at",
-          "updated_at"
-        ]
+        "required": ["id", "title", "project_id", "created_at", "updated_at"]
       },
       "Story": {
         "type": "object",
@@ -3462,13 +3348,7 @@
             "description": "The date and time when the story was last updated"
           }
         },
-        "required": [
-          "id",
-          "title",
-          "owner_id",
-          "created_at",
-          "updated_at"
-        ]
+        "required": ["id", "title", "owner_id", "created_at", "updated_at"]
       },
       "Task": {
         "type": "object",
@@ -3502,11 +3382,7 @@
             "description": "The status of the task"
           }
         },
-        "required": [
-          "title",
-          "project_id",
-          "status"
-        ]
+        "required": ["title", "project_id", "status"]
       },
       "User": {
         "type": "object",
@@ -3638,10 +3514,7 @@
                 "description": "The date and time the project was created"
               }
             },
-            "required": [
-              "title",
-              "chat_id"
-            ]
+            "required": ["title", "chat_id"]
           },
           {
             "type": "object",
@@ -4044,13 +3917,7 @@
                 "description": "The date and time when the story was last updated"
               }
             },
-            "required": [
-              "id",
-              "title",
-              "owner_id",
-              "created_at",
-              "updated_at"
-            ]
+            "required": ["id", "title", "owner_id", "created_at", "updated_at"]
           },
           {
             "type": "object",
@@ -4187,13 +4054,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "title",
-          "description",
-          "owner_id",
-          "template"
-        ]
+        "required": ["id", "title", "description", "owner_id", "template"]
       },
       "TemplateId": {
         "type": "number",
@@ -4248,10 +4109,7 @@
           "description": "The direction to sort by",
           "default": "asc",
           "type": "string",
-          "enum": [
-            "asc",
-            "desc"
-          ]
+          "enum": ["asc", "desc"]
         }
       }
     }
